apps/production/resumelo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumelo
  namespace: resumelo
  labels:
    app: resumelo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resumelo
  template:
    metadata:
      labels:
        app: resumelo
        name: resumelo
    spec:
      containers:
        - name: resumelo
          image: "registry.yesidlopez.de/resumelo:0.6.8" # {"$imagepolicy": "REPLACE_WITH_OVERLAY_POLICY"}
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
      imagePullSecrets:
        - name: registry-secret
