apps/production/resumelo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resumelo
  namespace: resumelo
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: resumelo
